--- a/ana.css
+++ b/ana.css
@@ -1,4 +1,11 @@
 body {
     background: #4b53bc;
 text-align: center;
+color: white;
+}
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
 }
